ros_ws/log/build_2023-10-16_17-09-55/camera_sensor/stdout_stderr.log
running egg_info
writing ../../build/camera_sensor/camera_sensor.egg-info/PKG-INFO
writing dependency_links to ../../build/camera_sensor/camera_sensor.egg-info/dependency_links.txt
writing entry points to ../../build/camera_sensor/camera_sensor.egg-info/entry_points.txt
writing requirements to ../../build/camera_sensor/camera_sensor.egg-info/requires.txt
writing top-level names to ../../build/camera_sensor/camera_sensor.egg-info/top_level.txt
reading manifest file '../../build/camera_sensor/camera_sensor.egg-info/SOURCES.txt'
writing manifest file '../../build/camera_sensor/camera_sensor.egg-info/SOURCES.txt'
running build
running build_py
copying camera_sensor/camera_node.py -> /home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/build/camera_sensor/build/lib/camera_sensor
running install
running install_lib
copying /home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/build/camera_sensor/build/lib/camera_sensor/camera_node.py -> /home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/install/camera_sensor/lib/python3.8/site-packages/camera_sensor
byte-compiling /home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/install/camera_sensor/lib/python3.8/site-packages/camera_sensor/camera_node.py to camera_node.cpython-38.pyc
  File "/home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/install/camera_sensor/lib/python3.8/site-packages/camera_sensor/camera_node.py", line 32
    break
    ^
SyntaxError: 'break' outside loop

running install_data
running install_egg_info
removing '/home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/install/camera_sensor/lib/python3.8/site-packages/camera_sensor-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/camera_sensor/camera_sensor.egg-info to /home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/install/camera_sensor/lib/python3.8/site-packages/camera_sensor-0.0.0-py3.8.egg-info
running install_scripts
Installing camera_node script to /home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/install/camera_sensor/lib/camera_sensor
writing list of installed files to '/home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/build/camera_sensor/install.log'
